--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ img{
 .showcase{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(./CafeBackground.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(/CafeBackground.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
@@ -129,9 +129,37 @@ img{
   text-decoration: none;
   color: inherit;
 }
+.container-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 60px;
+    grid-template-areas: 
+      "logo1 logo2 logo3"
+      "video video video";
+  }
+  
+  .showcase-image1 {
+    grid-area: logo1;
+  }
+  .showcase-image2 {
+    grid-area: logo2;
+  }
+  .showcase-image3 {
+    grid-area: logo3;
+  }
+  .showcase-video {
+    grid-area: video;
+  }
+  .showcase-video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-self: center; /* Center horizontally */
+    align-self: center; /* Center vertically */
+  }
 @media (max-width: 800px) {
     .container-grid {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         grid-gap: 50px;
     }
     .navbar{
@@ -139,11 +167,8 @@ img{
     }
     .navbar h1{
         font-size: 1.5em;
-        margin-botom: 10px;
     }
 }
-
-/* CSS for mobile phones (max-width: 500px) */
 @media (max-width: 500px) {
     .container-grid {
         grid-template-columns: 1fr;
@@ -153,6 +178,33 @@ img{
     }
     .navbar h1{
         font-size: 1.5em;
-        margin-botom: 10px;
     }
 }
+@media (max-width: 800px) {
+    .container-grid {
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-areas: 
+        "logo1"
+        "logo2"
+        "logo3"
+        "video";
+    }
+    .showcase-image1,
+    .showcase-image2,
+    .showcase-image3,
+    .showcase-video {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  
+  
+  @media (max-width: 500px) {
+    .container-grid {
+      grid-template-areas: 
+        "logo1 logo2 logo3"
+        "video";
+    }
+  }
+  
