--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@ img{
 .showcase{
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(/CafeBackground.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(CafeBackground.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
