--- a/About.css
+++ b/About.css
@@ -132,4 +132,26 @@ img{
     line-height: 2.5;
     margin-bottom: auto;
 }
-
+@media (max-width: 800px) {
+    .container-grid {
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 50px;
+    }
+    .navbar{
+        height: auto;
+    }
+    .navbar h1{
+        font-size: 1.5em;
+    }
+}
+@media (max-width: 500px) {
+    .container-grid {
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+    }.navbar{
+        height: auto;
+    }
+    .navbar h1{
+        font-size: 1.5em;
+    }
+}
